--- a/package.xml
+++ b/package.xml
@@ -22,7 +22,7 @@
   <run_depend>rqt_gui</run_depend>
   <run_depend>tf2</run_depend>
 
-  <export>
+<!--  <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
-  </export>
+  </export>-->
 </package>
