--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>rqt_graph</run_depend>
   <run_depend>rqt_gui</run_depend>
+  <run_depend>rqt_gui_py</run_depend>
   <!--<run_depend>tf2</run_depend>
 
   <export>
