Many pkgs) Corret and clean up dependencies.

--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <run_depend>rqt_gui</run_depend>
   <run_depend>rqt_gui_py</run_depend>
   <run_depend>tf2</run_depend>
+  <run_depend>tf2_msgs</run_depend>
   <run_depend>tf2_ros</run_depend>
 
   <export>
