--- a/package.xml
+++ b/package.xml
@@ -24,6 +24,8 @@
   <run_depend>tf2_msgs</run_depend>
   <run_depend>tf2_ros</run_depend>
 
+  <test_depend>python-mock</test_depend>
+
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
