--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,7 @@
   <author>Thibault Kruse</author>
   <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
   <maintainer email="gm130s@gmail.com">Isaac I.Y. Saito</maintainer>
+  <maintainer email="peter9606@gmail.com">Peter Han</maintainer>
 
   <license>BSD</license>
 
