[fix][test] test Python file not finding modules in the same pkg. Without this the following error was recorded:
```

 $ catkin_test_results
 build/rqt_tf_tree/test_results/rqt_tf_tree/nosetests-test.dotcode_tf_test.py.xml: 1 tests, 1 errors, 0 failures, 0 skipped
 Summary: 1 tests, 1 errors, 0 failures, 0 skipped
 $ more build/rqt_tf_tree/test_results/rqt_tf_tree/nosetests-test.dotcode_tf_test.py.xml
 <?xml version="1.0" encoding="UTF-8"?><testsuite name="nosetests" tests="1" errors="1" failures="0" skip="0"><testcase classname="nose.failure.Failure" name="runTest" time="0.000"><error type="exceptions.
ImportError" message="No module named rqt_tf_tree.dotcode_tf&#10;-------------------- &gt;&gt; begin captured logging &lt;&lt; --------------------&#10;rospy.topics: INFO: topicmanager initialized&#10;--------------------- &gt;&gt; end captured logging &lt;&lt; ---------------------"><![CDATA[  File "/usr/lib/python2.7/unittest/case.py", line 329, in run    testMethod()
      File "/usr/lib/python2.7/dist-packages/nose/loader.py", line 418, in loadTestsFromName
          addr.filename, addr.module)
	    File "/usr/lib/python2.7/dist-packages/nose/importer.py", line 47, in importFromPath
	        return self.importFromDir(dir_path, fqname)
		  File "/usr/lib/python2.7/dist-packages/nose/importer.py", line 94, in importFromDir
		      mod = load_module(part_fqname, fh, filename, desc)
		        File "/home/n130s/link/ROS/indigo_trusty/cws_viz/src/ros-visualization/rqt_tf_tree/test/dotcode_tf_test.py", line 43, in <module>
    from rqt_tf_tree.dotcode_tf import RosTfTreeDotcodeGenerator
    'No module named rqt_tf_tree.dotcode_tf\n-------------------- >> begin captured logging << -----------
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,6 @@ install(PROGRAMS scripts/rqt_tf_tree
 )
 
 if (CATKIN_ENABLE_TESTING)
-  catkin_add_nosetests(test/dotcode_tf_test.py)
+  catkin_add_nosetests(test/dotcode_tf_test.py
+     DEPENDENCIES ${${PROJECT_NAME}_EXPORTED_TARGETS})
 endif()
