--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="3">
   <name>rqt_tf_tree</name>
   <version>0.6.0</version>
   <description>rqt_tf_tree provides a GUI plugin for visualizing the ROS TF frame tree.</description>
@@ -14,19 +14,21 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
-  <run_depend>python-rospkg</run_depend>
-  <run_depend>qt_dotgraph</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>rqt_graph</run_depend>
-  <run_depend>rqt_gui</run_depend>
-  <run_depend>rqt_gui_py</run_depend>
-  <run_depend>tf2</run_depend>
-  <run_depend>tf2_msgs</run_depend>
-  <run_depend>tf2_ros</run_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
+  <exec_depend>qt_dotgraph</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>rqt_graph</exec_depend>
+  <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>tf2</exec_depend>
+  <exec_depend>tf2_msgs</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
-  <test_depend>python-mock</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
