--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,7 @@
   <maintainer email="gm130s@gmail.com">Isaac I.Y. Saito</maintainer>
   <maintainer email="peter9606@gmail.com">Peter Han</maintainer>
   <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
+  <maintainer email="arne.hitzmann@gmail.com">Arne Hitzmann</maintainer>
 
   <license>BSD</license>
 
